<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_image_transport_tools</name>
  <version>2.0.0</version>
  <description>tools for processing ffmpeg_image_transport_msgs</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>ffmpeg_image_transport</depend>
  <depend>ffmpeg_image_transport_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
